# software-invigilo

backend/invigilo-main-backend/backend/app/: README.md  pyproject.toml
backend/invigilo-main-backend/backend/app/alembic/: env.py
backend/invigilo-main-backend/backend/app/alembic/versions/: 12720265d7b9_ai_type_add_severity_column.py  e0a21eda29b1_initial_migration.py
backend/invigilo-main-backend/backend/app/app/: main.py  utils.py  worker.py
backend/invigilo-main-backend/backend/app/app/api/: deps.py
backend/invigilo-main-backend/backend/app/app/core/: celery_app.py  config.py  notification_bot.py  pdf_report.py  security.py
backend/invigilo-main-backend/backend/app/app/crud/: __init__.py  base.py  crud_ai_edge.py  crud_ai_sequence.py  crud_ai_server.py  crud_ai_type.py  crud_ai_vertex.py  crud_cam_ai_mapping.py  crud_cam_frame.py  crud_cam_server.py  crud_camera.py  crud_company.py  crud_incident.py  crud_upload.py  crud_user.py
backend/invigilo-main-backend/backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/invigilo-main-backend/backend/app/app/models/: __init__.py  ai_edge.py  ai_sequence.py  ai_server.py  ai_type.py  ai_vertex.py  cam_ai_mapping.py  cam_frame.py  cam_server.py  camera.py  company.py  incident.py  user.py
backend/invigilo-main-backend/backend/app/app/schemas/: __init__.py  ai_edge.py  ai_sequence.py  ai_server.py  ai_type.py  ai_vertex.py  cam_ai_mapping.py  cam_frame.py  cam_server.py  camera.py  company.py  core.py  token.py  (+5 more)
backend/invigilo-main-backend/backend/app/pdf-templates/: report.css  report.mako
(+99 files in other folders)
